# Salesforce-Translation-Handler

./: .gitignore  BUILD_AND_RELEASE.md  ExcelToSTFV2.ps1  HANDOFF.md  LICENSE  Manual_Test_Workbook.xlsx  Outdated and untranslated_ja_2026-05-25 0751.stf  README.md  STF_Organized_PiDev.xlsx  SalesforceTranslationHandler.desktop  TEST_PLAN.md  USER_GUIDE.md  build_exe.py  build_secure_setup.py  launch.bat  launch.command  launch.sh  launcher.py  pyproject.toml  setup_desktop_app.bat  stftoexcel_v2.ps1  test_summary_format.py  translate_excel_fixed.py
.agents/tasks/task-foundation-fixes/: 2025-01-15-120000-review.md  context.json  task.json
.agents/tasks/task-sprint-1-features/: 2025-01-16-140000-review.md  2025-01-16-141000-review.md  context.json  task.json
.agents/tasks/task-sprint-2-undo-find-replace/: 2025-06-01-150000-review.md  2025-06-01-151500-review.md  context.json  task.json
.agents/tasks/task-sprint-3-fuzzy-tm/: 2025-06-01-160000-review.md  2025-06-01-161500-review.md  context.json  task.json
.agents/tasks/task-sprint-4-resume-session/: 2025-06-01-170000-review.md  context.json  task.json
.agents/tasks/task-sprint-5-autodetect-installer/: 2025-06-01-180000-review.md  2025-06-01-181500-review.md  context.json  task.json
.agents/tasks/task-sprint-6-reuse-translations/: 2025-06-01-190000-review.md  2025-06-01-191500-review.md  context.json  task.json
.github/workflows/: build-installer.yml  ci.yml
docs/: APP_FLOW.md  INSTALLER.md  index.html
installer/: build_installer.py  sign_executable.ps1  stx_installer.iss
scripts/: create_shortcut.py  generate_icons.py  generate_test_workbook.py  install_desktop_entry.sh
src/stx/: __init__.py  autofix.py  checkpoint.py  cli.py  find_replace.py  fuzzy.py  glossary.py  import_translations.py  lang_detect.py  languages.py  memory.py  model.py  project.py  report.py  scope.py  session.py  validate.py  wakelock.py
src/stx/excel/: __init__.py  exporter.py  importer.py
src/stx/gui/: __init__.py  about_dialog.py  app.py  app_history.py  faq_dialog.py  find_replace_dialog.py  main_window.py  preflight_dialog.py  secrets.py  settings.py  settings_dialog.py  state.py  theme.py  undo.py  workers.py
src/stx/stf/: __init__.py  parser.py  writer.py
tests/: conftest.py  test_approved.py  test_autofix.py  test_backends.py  test_checkpoint.py  test_cli.py  test_fuzzy.py  test_glossary.py  test_import_translations.py  test_installer_script.py  test_lang_detect.py  test_languages.py  test_memory.py  test_project.py  test_protect.py  test_rate_limit.py  test_report.py  test_retranslate.py  test_runner_integration.py  test_scope.py  test_session.py  test_stf_round_trip.py  test_validate.py  test_wakelock.py
tests/gui/: test_column_filter.py  test_feedback_fixes.py  test_filename_helper.py  test_find_replace.py  test_limits_override_dialog.py  test_phase_snapshots.py  test_smoke.py  test_undo.py  test_workflow_context.py
(+46 files in other folders)
