[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-translation-handler"
version = "2.0.0"
description = "Professional desktop application for the Salesforce Translation Workbench (STF) workflow: STF -> Excel -> Translate -> Browse & Review -> Validate & Fix -> Export STF. (Salesforce Translation Manager)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Sourav Hazra" },
]
keywords = ["salesforce", "translation", "stf", "i18n", "localization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Localization",
]

# --- Runtime dependencies (core library + CLI) ---
dependencies = [
    "openpyxl>=3.1.2,<4",
    "deep-translator>=1.11.4,<2",
    "beautifulsoup4>=4.12.0,<5",
    "typer>=0.12.0,<1",
    "rich>=13.7.0,<14",
    "rapidfuzz>=3.0,<4",
]

[project.optional-dependencies]
# Language detection (optional, used by auto-detect feature)
detect = [
    "langdetect>=1.0.9,<2",
]
# Desktop GUI (heavier dependency, optional install)
gui = [
    "PySide6>=6.6.0,<7",
    "keyring>=23.0",
    "langdetect>=1.0.9,<2",
]
# Development / testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "langdetect>=1.0.9,<2",
]

[project.scripts]
# Command line interface (always available)
stx = "stx.cli:app"

[project.gui-scripts]
# Desktop GUI launcher (only available if GUI extra is installed)
stx-app = "stx.gui.app:main"

[project.urls]
Homepage = "https://github.com/sourav98hazra/Salesforce-Translation-Handler"
Repository = "https://github.com/sourav98hazra/Salesforce-Translation-Handler"
Issues = "https://github.com/sourav98hazra/Salesforce-Translation-Handler/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stx*"]

[tool.setuptools.package-data]
stx = ["py.typed"]

# --- Tooling ---
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
